made the update state to hide the picker

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -43,6 +43,7 @@
       </form>
 
       <button
+        *ngIf="!isUpdating"
         class="button is-primary selector-button"
         (click)="onSelectItem()"
         [disabled]="optionsAreValid()"
