--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,13 +1,14 @@
 <div class="container">
   
   <div class="current-list">
-      <h1>{{title}}</h1>
+      <h1>{{ myTitle }}</h1>
       <hr>
       
       <ol *ngIf="items">
-        <li *ngFor="let item of items; let i = index"> {{ item }} | 
-          <span class="del" (click)="onEditItem(i)">Edit</span> | 
-          <span class="del" (click)="onDeleteItem(i)">Delete</span> |
+        <li *ngFor="let item of items; let i = index"> {{ item }}
+          <span class="del button is-info" (click)="onEditItem(i)">Edit</span> 
+          <span class="del button is-danger" (click)="onDeleteItem(i)">Delete</span>
+          <span class="del button is-success" (click)="sendMessage()">Change Title</span>
         </li>
       </ol>
       <p *ngIf="optionsAreValid()">Write something punk</p>
